--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>中国香烟配送</title>
+    <title>吉隆坡中国香烟配送</title>
 </head>
 <body>
-    github pages
-    吉隆坡中国香烟24小时配送
+   
+
+
+    <div>
+
+        <div>    吉隆坡中国香烟24小时配送
+        </div>
+        <div>
+            <div>香烟预定方式：</div>
+            <div><span>telegram：@pitterxy</span></div>
+            <div><span>微信：ewrreterty</span></div>
+        </div>
+    </div>
+
+
+    
 </body>
 </html>
